Closed
Bug 339327
Opened 20 years ago
Closed 20 years ago
[FIX]Plugins (RealPlayer, Flash, Quicktime) broken on trunk (no plugin content displayed)
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: mcsmurf, Assigned: bzbarsky)
References
()
Details
(Keywords: regression, testcase)
Attachments
(3 files)
|
2.58 KB,
application/x-shockwave-flash
|
Details | |
|
374 bytes,
text/html
|
Details | |
|
2.94 KB,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
To reproduce:
0. Fetch trunk build
1. Go to http://webportal.bundestag.t-bn.de/Fernsehtext/html/index300.html
2. Notice you get some sound but no picture at all and the RealPlayer GUI is also not displayed; the RealPlayer plugin should be visible on the left side
Sometimes if you right click where the plugin should be it crashes.
This regressed between 20060521-09 and 20060522-08. Possibly fall-out from Bug 236873, the fix in Bug 338834 did not fix this bug here (build from 20060523-10 is still broken).
| Reporter | ||
Comment 1•20 years ago
|
||
Locally backing out Bug 236873 fixed the issue.
Assignee: nobody → peterv
Blocks: 236873
Comment 2•20 years ago
|
||
A smaller testcase would help.
| Reporter | ||
Comment 3•20 years ago
|
||
Check the URL for a somewhat minimal testcase. Do you see the bug there? stephend reported me this is wfm in his trunk build, so i'm not sure if you see this, too.
URL: bn.de%2Ffarm%2F*%2Fencoder%2Fbundesta...
Comment 4•20 years ago
|
||
Hmm, after downloading the latest RealPlayer for OS X I do have an image (currently a static picture: 'Programmvorschau') and sound. I don't see the Java applet on the right side, trying to figure out why.
| Reporter | ||
Comment 5•20 years ago
|
||
I asked a bit around on IRC, another person was seeing the bug, too. Yet another person did not see the bug. Both were using Windows, so it seems this bug might not be seen on all systems, but it's a good idea to test on Windows if you have it available.
Comment 6•20 years ago
|
||
I'm seeing a similar problem with Flash content, with a similar regression range (20060521-06 to 20060522-04).
I'm seeing this on Mac, but it was originally reported to me (by Nir Ichie) on Windows.
A sample page where this happens is http://www.discus-israel.com/DIndex/shrimpdex/profiles/japonica.htm , where a small Flash movie should appear on the last line of the table. I can upload a minimal testcase based on that page if necessary.
I assume this is the same bug (although this one talks about RealPlayer), but if required, I'll file a separate one.
Flags: blocking1.9a1?
| Reporter | ||
Comment 7•20 years ago
|
||
And if you look for a example with the Quicktime plugin, check http://homepage.mac.com/tracer302/MacBookPro/iMovieTheater80.html. I did not check if it matches the regression range but i'm quite sure it's the same as this bug here (since QT always worked in the past).
Comment 8•20 years ago
|
||
(In reply to comment #7)
> And if you look for a example with the Quicktime plugin, check
> http://homepage.mac.com/tracer302/MacBookPro/iMovieTheater80.html. I did not
> check if it matches the regression range but i'm quite sure it's the same as
> this bug here (since QT always worked in the past).
>
Yes, I verified that the regression for that page is the same as for the other issues.
I'm editing the summary to reflect the fact that this affects all kinds of plugins, not just RealPlayer.
Also setting Hardware/OS to All/All.
OS: Windows 2000 → All
Hardware: PC → All
Summary: RealPlayer plugin broken on trunk (no plugin content displayed) → Plugins (RealPlayer, Flash, Quicktime) broken on trunk (no plugin content displayed)
| Assignee | ||
Comment 9•20 years ago
|
||
This would really benefit from a minimal testcase attached to the bug...
Flags: blocking1.9a1? → blocking1.9a1+
Comment 10•20 years ago
|
||
Comment 11•20 years ago
|
||
You should see a small Flash animation at the top left corner of the page.
With recent trunk builds I just see a blank page.
Comment 12•20 years ago
|
||
Or, try this for a truly minimal testcase:
data:text/html,<embed src="https://bugzilla.mozilla.org/attachment.cgi?id=224369">
| Assignee | ||
Comment 13•20 years ago
|
||
Uri, thanks for the testcase!
The basic issue was that for <embed> IsDoneAddingChildren() always returned false, so we bailed early out of nsObjectFrame::Reflow and never set up the right sizing on the plugin window.
Assignee: peterv → bzbarsky
Status: NEW → ASSIGNED
Attachment #224458 -
Flags: superreview?(peterv)
Attachment #224458 -
Flags: review?(peterv)
| Assignee | ||
Updated•20 years ago
|
Priority: -- → P1
Summary: Plugins (RealPlayer, Flash, Quicktime) broken on trunk (no plugin content displayed) → [FIX]Plugins (RealPlayer, Flash, Quicktime) broken on trunk (no plugin content displayed)
Target Milestone: --- → mozilla1.9alpha
Comment 14•20 years ago
|
||
Comment on attachment 224458 [details] [diff] [review]
Fix
Thanks.
Attachment #224458 -
Flags: superreview?(peterv)
Attachment #224458 -
Flags: superreview+
Attachment #224458 -
Flags: review?(peterv)
Attachment #224458 -
Flags: review+
| Assignee | ||
Comment 15•20 years ago
|
||
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•