Fix IsDoneAddingChildren() for <embed>.  Bug 339327, r+sr=peterv